--- a/references.bib
+++ b/references.bib
@@ -1,25 +1,85 @@
-@article{usdacov,
-	author = {USDA},
-	title = {Appendix E: Selecting an Appropriate Covariance Structure},
-  url = {https://www.ars.usda.gov/ARSUserFiles/80000000/StatisticsGroupWebinars/Appendix%20E%20-%20Selecting%20a%20Covariance%20Structure.pdf},
-  year = {n.d.},
-  pages = {E.1 - E.8}
+@article{stekhoven2012missforest,
+  title = {MissForest—non-parametric missing value imputation for mixed-type data},
+  author = {Stekhoven, Daniel J and Bühlmann, Peter},
+  journal = {Bioinformatics},
+  volume = {28},
+  number = {1},
+  pages = {112--118},
+  year = {2012},
+  publisher = {Oxford University Press},
+  doi = {10.1093/bioinformatics/btr597},
+  url = {https://doi.org/10.1093/bioinformatics/btr597},
+  abstract = {MissForest is an iterative imputation method based on Random Forest, capable of handling mixed-type data efficiently and accurately.}
 }
 
-@online{purdue,
-  author = {Lipka, Alex and Tyner, Benjamin},
-  title = {Repeated Measures Covariance Structure},
-  url = {https://www.stat.purdue.edu/scs/help/method/Repeated%20measures%20analysis.pdf},
-  year = {2004},
-  date = {7-11-2004},
-  Publisher = {Statistical Consulting Service - Purdue University}
+@article{troyanskaya2001knn,
+  title={Missing value estimation methods for DNA microarrays},
+  author={Troyanskaya, Olga and Cantor, Michael and Sherlock, Gavin and Brown, Patrick and Hastie, Trevor and Tibshirani, Robert and Botstein, David and Altman, Russ B},
+  journal={Bioinformatics},
+  volume={17},
+  number={6},
+  pages={520--525},
+  year={2001},
+  publisher={Oxford University Press},
+  doi={10.1093/bioinformatics/17.6.520},
+  url={https://doi.org/10.1093/bioinformatics/17.6.520}
 }
-  
-@online{Statology,
-  author = {Bobbit, Zach},
-  title = {How to Interpret Negative AIC Values},
-  url = {https://www.statology.org/negative-aic/},
+
+@article{friedman2001greedy,
+  title={Greedy function approximation: A gradient boosting machine},
+  author={Friedman, Jerome H},
+  journal={Annals of Statistics},
+  volume={29},
+  number={5},
+  pages={1189--1232},
+  year={2001},
+  doi={10.1214/aos/1013203451},
+  url={https://doi.org/10.1214/aos/1013203451}
+}
+
+@article{breiman2001random,
+  title={Random forests},
+  author={Breiman, Leo},
+  journal={Machine Learning},
+  volume={45},
+  number={1},
+  pages={5--32},
+  year={2001},
+  publisher={Springer},
+  doi={10.1023/A:1010933404324},
+  url={https://doi.org/10.1023/A:1010933404324}
+}
+
+@article{wolpert1992stacked,
+  title={Stacked generalization},
+  author={Wolpert, David H},
+  journal={Neural Networks},
+  volume={5},
+  number={2},
+  pages={241--259},
+  year={1992},
+  publisher={Elsevier},
+  doi={10.1016/S0893-6080(05)80023-1},
+  url={https://doi.org/10.1016/S0893-6080(05)80023-1}
+}
+
+@article{stekhoven2011missforest,
+  title={MissForest---non-parametric missing value imputation for mixed-type data},
+  author={Stekhoven, Daniel J and B{\"u}hlmann, Peter},
+  journal={Bioinformatics},
+  volume={28},
+  number={1},
+  pages={112--118},
+  year={2011},
+  publisher={Oxford University Press},
+  doi={10.1093/bioinformatics/btr597},
+  url={https://doi.org/10.1093/bioinformatics/btr597}
+}
+
+@online{bradley2021stacking,
+  author = {Bradley Boehmke},
+  title = {Stacking models in machine learning},
   year = {2021},
-  date = {10-5-2021},
-  Publisher = {Statology}
+  url = {https://bradleyboehmke.github.io/HOML/stacking.html}
 }
+
